# libdsp

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  annotated.html  annotated_dup.js  basic__oscillators_8h.html  basic__oscillators_8h.js  basic__oscillators_8h__incl.map  basic__oscillators_8h__incl.md5  basic__oscillators_8h_source.html  bow__table_8h_source.html  bowed__string_8h_source.html  chorus_8h_source.html  circular__buffer_8h_source.html  classes.html  classsfdsp_1_1AllpassInterpolation-members.html  classsfdsp_1_1AllpassInterpolation.html  classsfdsp_1_1AllpassInterpolation.js  classsfdsp_1_1AllpassInterpolation__coll__graph.map  classsfdsp_1_1AllpassInterpolation__coll__graph.md5  classsfdsp_1_1BasicOscillator-members.html  classsfdsp_1_1BasicOscillator.html  classsfdsp_1_1BasicOscillator.js  classsfdsp_1_1Biquad-members.html  classsfdsp_1_1Biquad.html  classsfdsp_1_1Biquad.js  classsfdsp_1_1Biquad__inherit__graph.map  classsfdsp_1_1Biquad__inherit__graph.md5  classsfdsp_1_1BowTable-members.html  classsfdsp_1_1BowTable.html  classsfdsp_1_1BowTable.js  classsfdsp_1_1BowedString-members.html  classsfdsp_1_1BowedString.html  classsfdsp_1_1BowedString.js  classsfdsp_1_1Chorus-members.html  classsfdsp_1_1Chorus.html  classsfdsp_1_1Chorus.js  (+155 more)
.github/workflows/: ci.yml  codeql.yml  doxygen.yml  main.yaml  main.yml  update_doc.yaml
docs/: CNAME  README.md  doxygen-awesome.css  sinc_interpolation.html  sinc_resample.html  windowed_sinc.ipynb
docs/notebooks/: windowed_sinc.ipynb
include/: basic_oscillators.h  bow_table.h  bowed_string.h  buchla_lpg.h  chorus.h  circular_buffer.h  delayline.h  delayline_allpass.h  delayline_linear.h  delayline_sinc.h  dsp_base.h  dsp_utils.h  excitation_models.h  filter.h  interpolation_strategy.h  junction.h  line.h  phaseshapers.h  rms.h  sin_table.h  sinc_resampler.h  sinc_table.h  smooth_param.h  string_ensemble.h  termination.h  vector_phaseshaper.h  waveguide.h  waveguide_gate.h  waveguide_gates.h  window_functions.h
scripts/: create_test_files.py  freqz.py  interactive_freqz.py  make_sinc_table.py  make_sine_lut.py  sinc_interpolate_ccrma.py  waveguide_gates.py
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  enums_0.js  enums_1.js  enums_2.js  enumvalues_0.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  (+26 more)
src/: CMakeLists.txt  basic_oscillators.cpp  bow_table.cpp  bowed_string.cpp  buchla_lpg.cpp  chorus.cpp  delayline.cpp  delayline_linear.cpp  dsp_base.cpp  excitation_models.cpp  filter.cpp  interpolation_strategy.cpp  junction.cpp  line.cpp  phaseshapers.cpp  rms.cpp  sinc_resampler.cpp  smooth_param.cpp  string_ensemble.cpp  termination.cpp  vector_phaseshaper.cpp  waveguide.cpp  waveguide_gate.cpp  waveguide_gates.cpp
tests/: CMakeLists.txt  basic_oscillators_tests.cpp  buchla_lpg_tests.cpp  circular_buffer_tests.cpp  delayline_tests.cpp  player.cpp  resources.h  rms_tests.cpp  scattering_tests.cpp  sinc_resampler_tests.cpp  test_resources.h  test_utils.cpp  test_utils.h  waveguide_gates_tests.cpp  waveguide_tests.cpp
tests/perf/: CMakeLists.txt  aligned_perf.cpp  basicosc_perf.cpp  buchla_lpg_perf.cpp  phaseshaper_perf.cpp
toolchains/: daisy.cmake  daisytoolchain.cmake
tools/: CMakeLists.txt  arpegiator.h  bowedstring_tests.cpp  bowedstring_tests.h  dsp_tester.cpp  dsp_tester.h  effect_player.cpp  phaseshapers_tests.cpp  phaseshapers_tests.h  player.cpp  plot_spectrogram.py  readme.md  resampler.cpp  stringensemble_tests.cpp  stringensemble_tests.h  test_utils.cpp  test_utils.h  tests_list.h  waveguide_tests.h
tools/audio_test/: CMakeLists.txt  arpegiator.cpp  arpegiator.h  effect_player.cpp  phaseshapers_tests.cpp  phaseshapers_tests.h  tests_list.h  waveguide_tests.cpp
tools/common/: CMakeLists.txt  tool_utils.cpp  tool_utils.h
tools/player/: CMakeLists.txt  gamepad.h  gamepad_dummy.cpp  gamepad_xinput.cpp  midi_controller.cpp  midi_controller.h  player.cpp
tools/resampler/: CMakeLists.txt  resampler.cpp
tools/violonist/: CMakeLists.txt  plot_waveform.py  violonist.cpp
